--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,9 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/mysite.conf:/etc/nginx/conf.d/mysite.conf
       - ./wp:/var/www/html:delegated
+      - ./cache:/var/cache/nginx
    
   
   mysql:
